--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
     /* Styles for the calendar */
     body {
 
-background-color: aqua;
+      background-color: aqua;
       font-family: Arial, sans-serif;
       display: flex;
       color: #ffffff;
@@ -118,7 +118,7 @@ background-color: aqua;
       border: 1px solid #ddd;
       padding: 20px;
       background-color: #2c2c2c;
-  
+
       color: #fff;
 
       /* margin-bottom: 20px; */
@@ -254,15 +254,16 @@ background-color: aqua;
     }
 
     #app {
-      position: relative;
-      top: 150px; /* Adjust the value as needed */
-      margin: auto;
-      width: 850px; 
+      width: 800px;
+      margin:  auto;
+  
+     margin-top: 150px;
+
       background-color: #2c2c2c;
       padding: 20px;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
-  }
+    }
 
     .task {
       margin-bottom: 10px;
