--- a/code.css
+++ b/code.css
@@ -1,5 +1,5 @@
 body {
-  background-color: aqua;
+  background-color: rgb(45, 211, 211);
   font-family: Arial, sans-serif;
   display: flex;
   color: #ffffff;
@@ -99,7 +99,7 @@ button {
   background-color: #2c2c2c;
   color: #fff;
 }
-
+.buttt,
 #buttons button {
   background-color: #17a2b8;
   cursor: pointer;
@@ -118,7 +118,7 @@ button {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1000;
+  z-index: 2;
   /* Keep the header on top */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   padding-top: 20px;
@@ -169,8 +169,9 @@ nav ul li a {
   max-width: 400px;
   width: 100%;
   text-align: center;
-  z-index: 2;
+  z-index: 1001;
   /* Lower z-index for the modal */
+
 }
 
 .close-btn,
@@ -222,6 +223,7 @@ nav ul li a {
   padding: 10px;
   box-sizing: border-box;
   margin-bottom: 10px;
+ 
   background-color: #444;
   color: #fff;
   border: 1px solid #555;
@@ -262,6 +264,7 @@ main {
   border: 10px grey;
   border-radius: 8px;
   margin-bottom: 20px;
+  flex-wrap: wrap;
  
 }
 
@@ -306,7 +309,7 @@ h2 {
 .web-sec {
   margin-right:1100px;
   margin-bottom: 200px;
-  
+  flex-wrap: wrap;
 }
 /* .web-h1{
   margin-top: 200px;
