--- a/code.css
+++ b/code.css
@@ -269,14 +269,16 @@ main {
 }
 
 h2 {
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
 }
 
 .website-list {
   list-style-type: none;
   padding: 0;
-  flex-wrap:wrap ;
+  /* flex-wrap:wrap ; */
   position: fixed;
+  flex: 1; /* Each list takes equal space */
+  margin-left: 20px; /* Add some space between lists */
   
 }
 
@@ -303,13 +305,18 @@ h2 {
 .status {
   font-size: 12px;
   color: #888;
-  margin-bottom: 20px;
+
 }
 
 .web-sec {
   margin-right:1100px;
   margin-bottom: 200px;
-  flex-wrap: wrap;
+  overflow-x: auto; /* Allow horizontal scrolling if content overflows */
+  /* flex-wrap: wrap; */
+  display: flex; /* Use flexbox */
+  justify-content: space-between; 
+  width: 60%; /* Take up full width */
+
 }
 /* .web-h1{
   margin-top: 200px;
