--- a/code.css
+++ b/code.css
@@ -94,8 +94,9 @@ button {
 
 .clock,
 #stopwatch {
-  border: 1px solid #ddd;
+
   padding: 20px;
+  padding-bottom: 10px;
   background-color: #2c2c2c;
   color: #fff;
 }
