--- a/BB.css
+++ b/BB.css
@@ -1,7 +1,8 @@
 /* Default background image */
 body {
   position: fixed;
-  background-image: url(assets/img/BI.jpg);
+  height: 100%;
+  background-image: url(assets/img/BI.jpg) ;
   background-size: cover;
   /* Cover the entire background */
   background-repeat: no-repeat;
@@ -116,6 +117,7 @@ footer {
 
 .input-group {
   margin-bottom: 15px;
+  width: 400px;
   cursor: text;
 }
 
@@ -181,4 +183,9 @@ h1 {
 
 span {
   color: #fff;
+}
+.backgroundimg{
+
+  margin-top: 50%;
+  width: 100%;
 }
